applications/prod/silver-bullet/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: silverbullet
  labels:
    app: "silverbullet"
    prod-app-gateway: "true"
---
