applications/prod/silver-bullet/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: silverbullet
  namespace: silverbullet
  labels:
    app.kubernetes.io/name: silverbullet
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
  selector:
    app.kubernetes.io/name: silverbullet
---
